--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*----------  Font  ----------*/
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap');
+@font-face{
+    font-family: 'sansserifexbflf-italic';
+    src:url('font/sansserifexbflf-italic.otf');
+}
+
 /*----------  General  ----------*/
 *{
     padding: 0;
@@ -6,10 +13,11 @@
 }
 
 body{
-    font-family: 'Monterrat';
+    font-family: 'Montserrat', sans-serif;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow-x: hidden;
+    color:white;
 }
 
 ion-icon{
@@ -26,6 +34,8 @@ ion-icon{
     width: 100%;
     padding: 0 30px;
     font-size: 20px;
+    z-index: 1;
+    
 
     display: flex;
     align-items: center;
@@ -36,10 +46,11 @@ ion-icon{
 }
 
 .logo{
-    margin: auto;
+    margin: 0 auto 0 38%;
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
+    font-family: 'sansserifexbflf-italic';
 }
 
 .profile img{
@@ -62,6 +73,8 @@ ion-icon{
     position: absolute;
     width: 50%;
     height: 100%;
+    transition: 1s all cubic-bezier(.87, .76, .33, .98);
+    overflow: hidden;
 }
 
 .split.left{
@@ -72,4 +85,133 @@ ion-icon{
 .split.right{
     right:0;
     background:#E5D94E;
+}
+
+.hover-left .split.left{
+    width: 60%;
+}
+.hover-left .split.right{
+    width: 40%;
+}
+.hover-right .split.left{
+    width: 40%;
+}
+.hover-right .split.right{
+    width: 60%;
+}
+
+.perfume{
+    width: 65%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+}
+
+.candle{
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-40%);
+}
+
+.text{
+    width: 600px;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+    transition: all 1s cubic-bezier(.87, .76, .33, .98);
+}
+
+.text .subtitle{
+    font-size: 16px;
+    text-transform: uppercase;
+    color:white;
+    letter-spacing: 2px;
+}
+
+.text .title{
+    font-size: 80px;
+    color:white;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-family: 'sansserifexbflf-italic';
+    line-height: 1;
+    letter-spacing: 5px;
+    margin-top: 10px;
+}
+
+.text .desc{
+    font-size: 14px;
+    color:white;
+    font-weight: 300;
+    line-height: 2;
+    margin: 10px 0 30px 0;
+    width: 400px;
+}
+
+.text .button{
+    font-size: 16px;
+    background-color:transparent;
+    border: 2px solid white;
+    color:white;
+    padding:15px 50px;
+    text-align:center;
+    font-weight: 700;
+    letter-spacing: 1px;
+    cursor: pointer;
+    outline:none;
+    /* outline:none; 去除button的觸控外光暈 */
+    border-radius:100px;
+}
+
+.hover-left .split.left .text{
+    transform: translate(-40%,-50%);
+}
+
+.hover-left .split.right .text{
+    transform: translate(-40%,-50%);
+}
+
+.hover-right .split.right .text{
+    transform: translate(-60%,-50%);
+}
+
+.hover-right .split.left .text{
+    transform: translate(-45%,-50%);
+}
+
+/*----------  Slider  ----------*/
+.slider{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 80px;
+
+    display: flex;
+    align-items: center;
+}
+
+.pages{
+    padding: 0 20px;
+    font-weight: bold;
+}
+.pages span::after{
+    content:"";
+    display:inline-block;
+    border:.5px solid white;
+    width: 100px;
+    margin: 0 10px;
+    transform: translateY(-4px);
+}
+
+.arrows{
+    padding: 0 20px;
+}
+
+.arrows ion-icon{
+    font-size: 30px;
+    padding: 0 20px;
 }
